maintainIT2/src/objects/WO_Std_Task__c.object
<CustomObject>
    <description>Work Order Standard Task Library</description>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Group - Used to Categorize Work Order Standard Tasks</description>
        <inlineHelpText>Asset Group - Used to Categorize Work Order Standard Tasks</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Maintenance_Group__c</referenceTo>
        <relationshipLabel>WO Standard Tasks</relationshipLabel>
        <relationshipName>WO_Task_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Work Order Standard Task Description.  Copied to WO Task Comment.</description>
        <inlineHelpText>Work Order Standard Task Description.  Copied to WO Task Comment.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Estimated Hours to Perform Standard Task.  Copied to WO Task Planned Hours.</description>
        <inlineHelpText>Estimated Hours to Perform Standard Task.  Copied to WO Task Planned Hours.</inlineHelpText>
        <label>Est Hrs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Work Order Standard Task Instructions.  Copied to WO Task Instructions.</description>
        <inlineHelpText>Work Order Standard Task Instructions.  Copied to WO Task Instructions.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Std_Task_Number__c</fullName>
        <description>Work Order Standard Task Number.  To be used to auto-number Standard Task Name.</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Work Order Standard Task Number.  To be used to auto-number Standard Task Name.</inlineHelpText>
        <label>Std Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>WO Standard Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Std Task ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Standard Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Est_Hrs_GE_Zero</fullName>
        <active>true</active>
        <description>Ensures that the Estimated Hours are Greater Than or Equal to Zero</description>
        <errorConditionFormula>Estimated_Hours__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Estimated_Hours__c</errorDisplayField>
        <errorMessage>The Estimated Hours must be Greater Than or Equal to Zero (0)</errorMessage>
    </validationRules>
</CustomObject>